--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
     text-align: left;
     margin: 20px;
-    font-family: arial;
+    font-family: helvetica;
     background-color: rgb(219, 213, 213);
 }
 
